Reply function complete

--- a/scc-mvc/src/main/resources/templates/brand/report.html
+++ b/scc-mvc/src/main/resources/templates/brand/report.html
@@ -26,6 +26,7 @@
                 success: function (data) {
                     $("#page-count").html(data[0]);
                     $("#mess-count").html(data[1]);
+                    $("#message-count").html(data[1]);
                     $("#user-count").html(data[2]);
                     $("#ticket-count").html(data[3]);
                     $("#comment-count").html(data[4])
@@ -72,7 +73,7 @@
                     <!-- small box -->
                     <div class="small-box bg-primary">
                         <div class="inner">
-                            <h3 id="page-count">150</h3>
+                            <h3 id="page-count">0</h3>
                             <p>Facebook pages</p>
                         </div>
                         <div class="icon">
@@ -85,7 +86,7 @@
                     <!--Users dashs-->
                     <div class="small-box bg-green">
                         <div class="inner">
-                            <h3 id="mess-count">1500</h3>
+                            <h3 id="mess-count">0</h3>
                             <p>Direct messages</p>
                         </div>
                         <div class="icon">
@@ -98,7 +99,7 @@
                     <!--Users dashs-->
                     <div class="small-box bg-aqua">
                         <div class="inner">
-                            <h3 id="user-count">150</h3>
+                            <h3 id="user-count">0</h3>
                             <p>Users</p>
                         </div>
                         <div class="icon">
@@ -111,7 +112,7 @@
                     <!--Users dashs-->
                     <div class="small-box bg-yellow">
                         <div class="inner">
-                            <h3 id="ticket-count">150</h3>
+                            <h3 id="ticket-count">0</h3>
                             <p>Tickets</p>
                         </div>
                         <div class="icon">
@@ -174,7 +175,7 @@
 
                                 <div class="info-box-content">
                                     <span class="info-box-text">Total posts</span>
-                                    <span class="info-box-number"><span id="post-count">150</span><small> posts</small></span>
+                                    <span class="info-box-number"><span id="post-count">0</span><small> posts</small></span>
                                 </div>
                                 <!-- /.info-box-content -->
                             </div>
@@ -185,7 +186,7 @@
 
                                 <div class="info-box-content">
                                     <span class="info-box-text">Total comments</span>
-                                    <span class="info-box-number"><span id="comment-count">90</span><small> comments</small></span>
+                                    <span class="info-box-number"><span id="comment-count">0</span><small> comments</small></span>
                                 </div>
                                 <!-- /.info-box-content -->
                             </div>
@@ -194,8 +195,8 @@
                             <div class="info-box">
                                 <span class="info-box-icon bg-green"><i class="fa fa-comments"></i></span>
                                 <div class="info-box-content">
-                                    <span class="info-box-text">Total message</span>
-                                    <span class="info-box-number"><span id="message-count">90</span><small> message</small></span>
+                                    <span class="info-box-text">Total messages</span>
+                                    <span class="info-box-number"><span id="message-count">0</span><small> message</small></span>
                                 </div>
                                 <!-- /.info-box-content -->
                             </div>
