--- a/scc-mvc/src/main/resources/templates/Head.html
+++ b/scc-mvc/src/main/resources/templates/Head.html
@@ -122,10 +122,10 @@
                     <ul class="dropdown-menu" style="width: 20vh; border: 1px solid lightgray" >
                         <!-- User image -->
                         <li class="user-header">
-                            <img src="img/user2-160x160.jpg" class="img-circle" alt="User Image"/>
+                            <img src="img/user-default.png" class="img-square" style="background-color: lightblue;" alt="User Image"/>
 
                             <p th:text="${session.fullname}">
-                           </p><p  style="margin-top: -10px" th:text=" 'username: '+${session.username}">
+                           </p><p  style="margin-top: -10px" th:text="${session.username}">
                         </p>
                         </li>
 
