--- a/scc-mvc/src/main/resources/templates/user/index.html
+++ b/scc-mvc/src/main/resources/templates/user/index.html
@@ -23,8 +23,10 @@
     var days = new Array();
     var curr = new Date; // get current date
     var first = curr.getDate() - curr.getDay() -6;
+    var currentUserChartData = new Array();
 
-    for(var i = 1;i<=7;i++){
+
+    for(var i = 0;i<=6;i++){
         var next = new Date(curr.getTime());
         next.setDate(first + i);
         days.push(next.getDate()+"/"+next.getMonth());
@@ -55,6 +57,64 @@
                         onclickActive(data.userid);
                     });
                 }
+            }
+        });
+
+        $.ajax({
+            url: '/user/countcoummentlast7day',
+            type: "GET",
+            data: {userId: userId},
+            dataType: "json",
+            async: false,
+            success: function (data) {
+                currentUserChartData = data;
+                
+                myChart.destroy();
+                myChart = new Chart(ctx, {
+                    type: 'bar',
+                    data: {
+                        labels: days,
+                        datasets: [{
+                            label: '# of comment made',
+                            data: data,
+                            backgroundColor: [
+                                commentColor,
+                                commentColor,
+                                commentColor,
+                                commentColor,
+                                commentColor,
+                                commentColor,
+                                commentColor,
+                            ],
+
+                            borderWidth: 1
+                        },{
+                            label: '# of ticket close',
+                            data: [15, 12, 2, 0, 1, 3],
+                            backgroundColor: [
+                                ticketColor,
+                                ticketColor,
+                                ticketColor,
+                                ticketColor,
+                                ticketColor,
+                                ticketColor,
+                                ticketColor,
+                            ],
+
+                            borderWidth: 1
+                        }]
+                    },
+                    options: {
+                        scales: {
+                            yAxes: [{
+                                ticks: {
+                                    beginAtZero:true
+                                }
+                            }]
+                        }
+                    }
+                });
+
             }
         });
     }
@@ -394,14 +454,15 @@
             labels: days,
             datasets: [{
                 label: '# of comment made',
-                data: [12, 19, 3, 5, 2, 3],
+                data: currentUserChartData,
                 backgroundColor: [
                     commentColor,
                     commentColor,
                     commentColor,
                     commentColor,
                     commentColor,
-                    commentColor
+                    commentColor,
+                    commentColor,
                 ],
 
                 borderWidth: 1
