--- a/scc-mvc/src/main/resources/templates/ticket/ticket_modal.html
+++ b/scc-mvc/src/main/resources/templates/ticket/ticket_modal.html
@@ -93,7 +93,7 @@
                     </select>
                 </div>
                 <div class="form group">
-                    <label for="assignee"> Assignee</label>
+                    <label for="newticketassignee"> Assignee</label>
                     <select id="newticketassignee" class="form-control" >
                     </select>
                 </div>
