--- a/scc-mvc/src/main/resources/templates/messenger/index.html
+++ b/scc-mvc/src/main/resources/templates/messenger/index.html
@@ -249,7 +249,7 @@
 
 
             <!--Cot o giua. Noi dung chat-->
-            <div class="col-md-6 cmtbox" id="conversation"
+            <div class="col-md-6 mess-cmtbox" id="conversation"
                  style=" background-color: inherit; border-right: 1px solid lightgray">
 
                 <div class="header-customer-name">
