--- a/scc-mvc/src/main/resources/templates/user/index.html
+++ b/scc-mvc/src/main/resources/templates/user/index.html
@@ -88,21 +88,23 @@
                             ],
 
                             borderWidth: 1
-                        },{
-                            label: '# of ticket close',
-                            data: [15, 12, 2, 0, 1, 3],
-                            backgroundColor: [
-                                ticketColor,
-                                ticketColor,
-                                ticketColor,
-                                ticketColor,
-                                ticketColor,
-                                ticketColor,
-                                ticketColor,
-                            ],
-
-                            borderWidth: 1
-                        }]
+                        },
+//                            {
+//                            label: '# of ticket close',
+//                            data: [15, 12, 2, 0, 1, 3],
+//                            backgroundColor: [
+//                                ticketColor,
+//                                ticketColor,
+//                                ticketColor,
+//                                ticketColor,
+//                                ticketColor,
+//                                ticketColor,
+//                                ticketColor,
+//                            ],
+//
+//                            borderWidth: 1
+//                        }
+                        ]
                     },
                     options: {
                         scales: {
