dẹp mẹ mấy cái alert đi, mất session thì ra trang login

--- a/scc-mvc/src/main/resources/templates/Head.html
+++ b/scc-mvc/src/main/resources/templates/Head.html
@@ -130,7 +130,7 @@
                         </li>
 
                         <li class="user-footer ">
-                            <a href="/LogOut" class="btn btn-default btn-flat">Profile</a>
+                            <a href="/profile/index" class="btn btn-default btn-flat">Profile</a>
                             <a href="/LogOut" class="btn btn-danger" style="color: white">Sign out</a>
                         </li>
 
