--- a/scc-mvc/src/main/resources/templates/user/index.html
+++ b/scc-mvc/src/main/resources/templates/user/index.html
@@ -24,7 +24,7 @@
     var curr = new Date; // get current date
     var first = curr.getDate() - curr.getDay() -6;
     var currentUserChartData = new Array();
-
+    var currentUserMessageChartData = new Array();
 
     for(var i = 0;i<=6;i++){
         var next = new Date(curr.getTime());
@@ -68,55 +68,69 @@
             async: false,
             success: function (data) {
                 currentUserChartData = data;
-                
-                myChart.destroy();
-                myChart = new Chart(ctx, {
-                    type: 'bar',
-                    data: {
-                        labels: days,
-                        datasets: [{
-                            label: '# of comment made',
-                            data: data,
-                            backgroundColor: [
-                                commentColor,
-                                commentColor,
-                                commentColor,
-                                commentColor,
-                                commentColor,
-                                commentColor,
-                                commentColor,
-                            ],
+            }
 
-                            borderWidth: 1
-                        },
-//                            {
-//                            label: '# of ticket close',
-//                            data: [15, 12, 2, 0, 1, 3],
-//                            backgroundColor: [
-//                                ticketColor,
-//                                ticketColor,
-//                                ticketColor,
-//                                ticketColor,
-//                                ticketColor,
-//                                ticketColor,
-//                                ticketColor,
-//                            ],
-//
-//                            borderWidth: 1
-//                        }
-                        ]
-                    },
-                    options: {
-                        scales: {
-                            yAxes: [{
-                                ticks: {
-                                    beginAtZero:true
-                                }
-                            }]
-                        }
+
+        });
+
+        $.ajax({
+            url: '/user/countmessagemadelast7day',
+            type: "GET",
+            data: {userId: userId},
+            dataType: "json",
+            async: false,
+            success: function (data) {
+                currentUserMessageChartData = data;
+            }
+
+
+        });
+
+        myChart.destroy();
+        myChart = new Chart(ctx, {
+            type: 'bar',
+            data: {
+                labels: days,
+                datasets: [{
+                    label: '# of comment made',
+                    data: currentUserChartData,
+                    backgroundColor: [
+                        commentColor,
+                        commentColor,
+                        commentColor,
+                        commentColor,
+                        commentColor,
+                        commentColor,
+                        commentColor,
+                    ],
+
+                    borderWidth: 1
+                },
+                    {
+                        label: '# of message made',
+                        data: currentUserMessageChartData,
+                        backgroundColor: [
+                            ticketColor,
+                            ticketColor,
+                            ticketColor,
+                            ticketColor,
+                            ticketColor,
+                            ticketColor,
+                            ticketColor,
+                        ],
+
+                        borderWidth: 1
                     }
-                });
-
+                ]
+            },
+            options: {
+                scales: {
+                    yAxes: [{
+                        ticks: {
+                            beginAtZero:true
+                        }
+                    }]
+                }
             }
         });
     }
