Fix follow ticket comment&reply
Fix follow ticket

--- a/scc-mvc/src/main/resources/templates/followticket.html
+++ b/scc-mvc/src/main/resources/templates/followticket.html
@@ -135,9 +135,9 @@
         <input type="hidden" th:value="${ticketid}" id="ticketid"/>
 
         <div id="reply-comment-item" style="display:none;margin-top: 5px">
-            <div style="margin-left: 70px;width: 720px">
+            <div style="margin-left: 50px">
                 <div class="cmt"
-                     style="background-color: whitesmoke; border-top: none">
+                     style="background-color: whitesmoke; border-top: none; border-left: 2px solid lightgray">
                     <div class="cmtContent" style="margin-left: 5px;">
                         <div class="dropup " style=" position: absolute">
                             <button data-toggle="dropdown" id="ddlPageList"
@@ -162,7 +162,7 @@
                             <input onkeyup="onReplyEnterHit(event,$(this))" id="txtReplyBox" value=""
                                    placeholder="Write a reply..."
                                    type="text"
-                                   style="font-size:14px; color:black; width:90%; height: 25px; background-color: transparent;border:0; outline: none">
+                                   style="font-size:14px; color:black; width:90%; height: 25px; background-color: transparent;border:0; border-bottom: 1px solid blue; outline: none">
                         </div>
                         </p>
                     </div>
