sửa 1 số lỗi ở messenger

--- a/scc-mvc/src/main/resources/templates/messenger/index.html
+++ b/scc-mvc/src/main/resources/templates/messenger/index.html
@@ -260,7 +260,7 @@
                             class="fa fa-circle-o-notch fa-pulse fa-3x fa-fw"></i></div>
                 </div>
                 <ul class="chat" id="conversationContent"
-                    style="overflow: scroll; height: 540px; margin-left: 10px;">
+                    style="overflow: scroll; height:100vh; margin-left: 10px; padding-bottom: 20vh">
 
                 </ul>
                 <div style="position: fixed; bottom: 0px; background-color: white; padding: 10px 0px 10px 0px; margin-left: 0px" id="conversationReply">
